[tool.poetry]
name = "async-exec"
version = "0.1.0"
description = ""
authors = ["Amit Kotlovski <amit@amitkot.com>"]
readme = "README.md"
packages = [{include = "async_exec"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
httpx = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
